- xtec-booking: Fixed size image in modal window with the booking details (Trello #1399)
- xtec-booking: Fixed styles in day view (Trello #1399)
- buddypress-docs: Tag searches use 'and' as a default condition. Changed text link accordingly (Trello #1368)
- add-to-any: Upgraded to version 1.7 (Trello #1283)
- buddypress: Corrected translation in register page (Trello #1382)


Changes 16.09.19
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.4 (Trello #1345)
- GCE: Updated from 2.2.5 (Legacy Google Calendar Events 2.4) to 3.1.2 (Simple Calendar - Google Calendar Plugin) (Trello #1034)
- GCE: Included fix for grouped calendars (Trello #1371)
- grup-classe: Removed option to select format of the calendar due to the changes in GCE v3.x (Trello #1034)
- New users: Fixed URL to change password, which was not being shown in email sent to new users
- blogger-importer: Fixed import of images (Trello #1340)
- xtec-booking: Added plugin for bookings of spaces or equipment (Trello #1166)
- xtec-booking: Included fix for bookings without start and finish hours (Trello #1373)
- Added role Professor (Trello #1166)
- Role Professor: Removed links to comments and tools (Trello #1354)
- Tools: Added custom tool boxes for timetables and events management. Removed bp and categories boxes (Trello #1342)
- buddypress-docs: Fixed upload of image using editor's menu option when creating a new document (Trello #1229)


Changes 16.09.07
---------------------------------------------------------------------------------------
- buddypress-docs: Fixed bug when uploading files when editing them if protocol it is not HTTPS (Trello #1205)


Changes 16.08.22
---------------------------------------------------------------------------------------
- intranet-importer: Fixed import of images with capital letters in extensions
- intranet-importer: Added import of images uploaded using IWforms